Added Available Jobs Section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,22 @@
             </div>
         </div>
 
-        <hr class="text-[#E6E7E9]">
+        <hr class="text-[#E6E7E9] pb-6">
     </nav>
 
+    <!-- main  -->
+    <main class="container mx-auto">
+        <!-- available jobs -->
+        <div class="flex justify-between">
+            <p class="font-semibold text-xl text-[#002C5C]">Available Jobs</p>
+            <p class="text-[#64748B]"><span class="mr-1">8</span>Jobs</p>
+        </div>
+        <div class="pt-6 pb-4">
+            <button class="px-8 py-2 rounded-sm text-white text-xs font-semibold bg-[#3B82F6]">All</button>
+            <button class="px-8 py-2 rounded-sm text-[#64748B] text-xs font-semibold bg-white">Interview</button>
+            <button class="px-8 py-2 rounded-sm text-[#64748B] text-xs font-semibold bg-white">Rejected</button>
+        </div>
+    </main>
     <!-- add js -->
     <script src="script.js"></script>
 </body>
