--- a/index.html
+++ b/index.html
@@ -51,7 +51,83 @@
         <!-- card items -->
         <div>
             <!-- card item-1 -->
-            <div class="bg-white rounded-sm p-6 relative">
+            <div class="bg-white rounded-sm p-6 mb-4 relative">
+                <h2 class="font-semibold text-lg text-[#002C5C]">Mobile First Corp</h2>
+                <p class="text-[#64748B] mt-1">React native developer</p>
+                <p class="text-[#64748B] my-5 text-sm">Remote • Full-time • $130,000 - $175,000</p>
+                <button class="text-[#002C5C] my-2 text-sm bg-[#EEF4FF] px-3 py-2 font-semibold">NOT APPLIED</button>
+                <P class="text-[#323B49] mb-5">Build cross-platform mobile applications using React
+                    Native. Work on
+                    products used by millions of
+                    users worldwide.</P>
+                <button
+                    class="text-[#10B981] font-semibold uppercase py-2 px-3 border rounded-sm border-[#10B981] mr-2">Interview</button>
+                <button
+                    class="text-[#EF4444] font-semibold uppercase py-2 px-3 border rounded-sm border-[#EF4444]">Interview</button>
+                <div>
+                    <img class="cursor-pointer border-[#F1F2F4] border-2 rounded-full p-2 absolute top-6 right-0"
+                        src="img/delete.png" alt="">
+                </div>
+            </div>
+            <!-- card item-2 -->
+            <div class="bg-white rounded-sm p-6 mb-4 relative">
+                <h2 class="font-semibold text-lg text-[#002C5C]">Mobile First Corp</h2>
+                <p class="text-[#64748B] mt-1">React native developer</p>
+                <p class="text-[#64748B] my-5 text-sm">Remote • Full-time • $130,000 - $175,000</p>
+                <button class="text-[#002C5C] my-2 text-sm bg-[#EEF4FF] px-3 py-2 font-semibold">NOT APPLIED</button>
+                <P class="text-[#323B49] mb-5">Build cross-platform mobile applications using React
+                    Native. Work on
+                    products used by millions of
+                    users worldwide.</P>
+                <button
+                    class="text-[#10B981] font-semibold uppercase py-2 px-3 border rounded-sm border-[#10B981] mr-2">Interview</button>
+                <button
+                    class="text-[#EF4444] font-semibold uppercase py-2 px-3 border rounded-sm border-[#EF4444]">Interview</button>
+                <div>
+                    <img class="cursor-pointer border-[#F1F2F4] border-2 rounded-full p-2 absolute top-6 right-0"
+                        src="img/delete.png" alt="">
+                </div>
+            </div>
+            <!-- card item-3 -->
+            <div class="bg-white rounded-sm p-6 mb-4 relative">
+                <h2 class="font-semibold text-lg text-[#002C5C]">Mobile First Corp</h2>
+                <p class="text-[#64748B] mt-1">React native developer</p>
+                <p class="text-[#64748B] my-5 text-sm">Remote • Full-time • $130,000 - $175,000</p>
+                <button class="text-[#002C5C] my-2 text-sm bg-[#EEF4FF] px-3 py-2 font-semibold">NOT APPLIED</button>
+                <P class="text-[#323B49] mb-5">Build cross-platform mobile applications using React
+                    Native. Work on
+                    products used by millions of
+                    users worldwide.</P>
+                <button
+                    class="text-[#10B981] font-semibold uppercase py-2 px-3 border rounded-sm border-[#10B981] mr-2">Interview</button>
+                <button
+                    class="text-[#EF4444] font-semibold uppercase py-2 px-3 border rounded-sm border-[#EF4444]">Interview</button>
+                <div>
+                    <img class="cursor-pointer border-[#F1F2F4] border-2 rounded-full p-2 absolute top-6 right-0"
+                        src="img/delete.png" alt="">
+                </div>
+            </div>
+            <!-- card item-4 -->
+            <div class="bg-white rounded-sm p-6 mb-4 relative">
+                <h2 class="font-semibold text-lg text-[#002C5C]">Mobile First Corp</h2>
+                <p class="text-[#64748B] mt-1">React native developer</p>
+                <p class="text-[#64748B] my-5 text-sm">Remote • Full-time • $130,000 - $175,000</p>
+                <button class="text-[#002C5C] my-2 text-sm bg-[#EEF4FF] px-3 py-2 font-semibold">NOT APPLIED</button>
+                <P class="text-[#323B49] mb-5">Build cross-platform mobile applications using React
+                    Native. Work on
+                    products used by millions of
+                    users worldwide.</P>
+                <button
+                    class="text-[#10B981] font-semibold uppercase py-2 px-3 border rounded-sm border-[#10B981] mr-2">Interview</button>
+                <button
+                    class="text-[#EF4444] font-semibold uppercase py-2 px-3 border rounded-sm border-[#EF4444]">Interview</button>
+                <div>
+                    <img class="cursor-pointer border-[#F1F2F4] border-2 rounded-full p-2 absolute top-6 right-0"
+                        src="img/delete.png" alt="">
+                </div>
+            </div>
+            <!-- card item-5 -->
+            <div class="bg-white rounded-sm p-6 mb-4 relative">
                 <h2 class="font-semibold text-lg text-[#002C5C]">Mobile First Corp</h2>
                 <p class="text-[#64748B] mt-1">React native developer</p>
                 <p class="text-[#64748B] my-5 text-sm">Remote • Full-time • $130,000 - $175,000</p>
