--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 class="text-[#002C5C] font-[geist] pt-10 pb-2.5  text-3xl font-bold">Job Application Tracker
         </h1>
         <!-- Counts -->
-        <div class="grid grid-cols-3 gap-4 pb-6">
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 pb-6">
             <div class="bg-white rounded-lg p-5">
                 <p class="text-[#323B49] text-sm">Total</p>
                 <p id="" class="font-bold text-2xl text-[#002C5C]">0</p>
@@ -38,7 +38,7 @@
     <!-- main  -->
     <main class="container mx-auto">
         <!-- available jobs -->
-        <div class="flex justify-between">
+        <div class="flex justify-between items-center">
             <p class="font-semibold text-xl text-[#002C5C]">Available Jobs</p>
             <p class="text-[#64748B]"><span class="mr-1">8</span>Jobs</p>
         </div>
