--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 pb-6">
             <div class="bg-white rounded-lg p-5">
                 <p class="text-[#323B49] text-sm">Total</p>
-                <p id="" class="font-bold text-2xl text-[#002C5C]">0</p>
+                <p id="total" class="font-bold text-2xl text-[#002C5C]">0</p>
             </div>
             <div class="bg-white rounded-lg p-5">
                 <p class="text-[#323B49] text-sm">Interview</p>
-                <p id="" class="font-bold text-2xl text-[#10B981]">0</p>
+                <p id="interview" class="font-bold text-2xl text-[#10B981]">0</p>
             </div>
             <div class="bg-white rounded-lg p-5">
-                <p class="text-[#323B49] text-sm">Total</p>
-                <p id="" class="font-bold text-2xl text-[#EF4444]">0</p>
+                <p class="text-[#323B49] text-sm">Rejected</p>
+                <p id="rejected" class="font-bold text-2xl text-[#EF4444]">0</p>
             </div>
         </div>
 
@@ -40,112 +40,44 @@
         <!-- available jobs -->
         <div class="flex justify-between items-center">
             <p class="font-semibold text-xl text-[#002C5C]">Available Jobs</p>
-            <p class="text-[#64748B]"><span class="mr-1">8</span>Jobs</p>
+            <p class="text-[#64748B]"><span id="available-jobs" class="mr-1">0</span>Jobs</p>
         </div>
         <div class="pt-6 pb-4">
-            <button class="px-8 py-2 mr-2 rounded-sm text-white text-xs font-semibold bg-[#3B82F6]">All</button>
-            <button class="px-8 py-2 mr-2  rounded-sm text-[#64748B] text-xs font-semibold bg-white">Interview</button>
-            <button class="px-8 py-2 rounded-sm text-[#64748B] text-xs font-semibold bg-white">Rejected</button>
+            <button id="all-btn" onclick="toggleStyle('all-btn')"
+                class="px-8 py-2 mr-2 rounded-sm text-white text-xs font-semibold bg-[#3B82F6]">All</button>
+            <button id="interview-btn" onclick="toggleStyle('interview-btn')"
+                class="px-8 py-2 mr-2  rounded-sm text-[#64748B] text-xs font-semibold bg-white">Interview</button>
+            <button id="rejected-btn" onclick="toggleStyle('rejected-btn')"
+                class="px-8 py-2 rounded-sm text-[#64748B] text-xs font-semibold bg-white">Rejected</button>
         </div>
+        <!-- filtered section -->
+        <section id="filtered-section" class="hidden">
+
+        </section>
 
         <!-- card items -->
-        <div>
+        <section id="card">
             <!-- card item-1 -->
             <div class="bg-white rounded-sm p-6 mb-4 relative">
-                <h2 class="font-semibold text-lg text-[#002C5C]">Mobile First Corp</h2>
-                <p class="text-[#64748B] mt-1">React native developer</p>
-                <p class="text-[#64748B] my-5 text-sm">Remote • Full-time • $130,000 - $175,000</p>
-                <button class="text-[#002C5C] my-2 text-sm bg-[#EEF4FF] px-3 py-2 font-semibold">NOT APPLIED</button>
-                <P class="text-[#323B49] mb-5">Build cross-platform mobile applications using React
+                <h2 class="job-description font-semibold text-lg text-[#002C5C]">Mobile First Corp</h2>
+                <p class="job-title text-[#64748B] mt-1">React native developer</p>
+                <p class="job-queries text-[#64748B] my-5 text-sm">Remote • Full-time • $130,000 - $175,000</p>
+                <button class="job-apply text-[#002C5C] my-2 text-sm bg-[#EEF4FF] px-3 py-2 font-semibold">NOT
+                    APPLIED</button>
+                <P class="job-details text-[#323B49] mb-5">Build cross-platform mobile applications using React
                     Native. Work on
                     products used by millions of
                     users worldwide.</P>
                 <button
-                    class="text-[#10B981] font-semibold uppercase py-2 px-3 border rounded-sm border-[#10B981] mr-2">Interview</button>
+                    class="int-btn text-[#10B981] font-semibold uppercase py-2 px-3 border rounded-sm border-[#10B981] mr-2">Interview</button>
                 <button
-                    class="text-[#EF4444] font-semibold uppercase py-2 px-3 border rounded-sm border-[#EF4444]">Interview</button>
+                    class="reject-btn  text-[#EF4444] font-semibold uppercase py-2 px-3 border rounded-sm border-[#EF4444]">Rejected</button>
                 <div>
                     <img class="cursor-pointer border-[#F1F2F4] border-2 rounded-full p-2 absolute top-6 right-0"
                         src="img/delete.png" alt="">
                 </div>
             </div>
-            <!-- card item-2 -->
-            <div class="bg-white rounded-sm p-6 mb-4 relative">
-                <h2 class="font-semibold text-lg text-[#002C5C]">Mobile First Corp</h2>
-                <p class="text-[#64748B] mt-1">React native developer</p>
-                <p class="text-[#64748B] my-5 text-sm">Remote • Full-time • $130,000 - $175,000</p>
-                <button class="text-[#002C5C] my-2 text-sm bg-[#EEF4FF] px-3 py-2 font-semibold">NOT APPLIED</button>
-                <P class="text-[#323B49] mb-5">Build cross-platform mobile applications using React
-                    Native. Work on
-                    products used by millions of
-                    users worldwide.</P>
-                <button
-                    class="text-[#10B981] font-semibold uppercase py-2 px-3 border rounded-sm border-[#10B981] mr-2">Interview</button>
-                <button
-                    class="text-[#EF4444] font-semibold uppercase py-2 px-3 border rounded-sm border-[#EF4444]">Interview</button>
-                <div>
-                    <img class="cursor-pointer border-[#F1F2F4] border-2 rounded-full p-2 absolute top-6 right-0"
-                        src="img/delete.png" alt="">
-                </div>
-            </div>
-            <!-- card item-3 -->
-            <div class="bg-white rounded-sm p-6 mb-4 relative">
-                <h2 class="font-semibold text-lg text-[#002C5C]">Mobile First Corp</h2>
-                <p class="text-[#64748B] mt-1">React native developer</p>
-                <p class="text-[#64748B] my-5 text-sm">Remote • Full-time • $130,000 - $175,000</p>
-                <button class="text-[#002C5C] my-2 text-sm bg-[#EEF4FF] px-3 py-2 font-semibold">NOT APPLIED</button>
-                <P class="text-[#323B49] mb-5">Build cross-platform mobile applications using React
-                    Native. Work on
-                    products used by millions of
-                    users worldwide.</P>
-                <button
-                    class="text-[#10B981] font-semibold uppercase py-2 px-3 border rounded-sm border-[#10B981] mr-2">Interview</button>
-                <button
-                    class="text-[#EF4444] font-semibold uppercase py-2 px-3 border rounded-sm border-[#EF4444]">Interview</button>
-                <div>
-                    <img class="cursor-pointer border-[#F1F2F4] border-2 rounded-full p-2 absolute top-6 right-0"
-                        src="img/delete.png" alt="">
-                </div>
-            </div>
-            <!-- card item-4 -->
-            <div class="bg-white rounded-sm p-6 mb-4 relative">
-                <h2 class="font-semibold text-lg text-[#002C5C]">Mobile First Corp</h2>
-                <p class="text-[#64748B] mt-1">React native developer</p>
-                <p class="text-[#64748B] my-5 text-sm">Remote • Full-time • $130,000 - $175,000</p>
-                <button class="text-[#002C5C] my-2 text-sm bg-[#EEF4FF] px-3 py-2 font-semibold">NOT APPLIED</button>
-                <P class="text-[#323B49] mb-5">Build cross-platform mobile applications using React
-                    Native. Work on
-                    products used by millions of
-                    users worldwide.</P>
-                <button
-                    class="text-[#10B981] font-semibold uppercase py-2 px-3 border rounded-sm border-[#10B981] mr-2">Interview</button>
-                <button
-                    class="text-[#EF4444] font-semibold uppercase py-2 px-3 border rounded-sm border-[#EF4444]">Interview</button>
-                <div>
-                    <img class="cursor-pointer border-[#F1F2F4] border-2 rounded-full p-2 absolute top-6 right-0"
-                        src="img/delete.png" alt="">
-                </div>
-            </div>
-            <!-- card item-5 -->
-            <div class="bg-white rounded-sm p-6 mb-4 relative">
-                <h2 class="font-semibold text-lg text-[#002C5C]">Mobile First Corp</h2>
-                <p class="text-[#64748B] mt-1">React native developer</p>
-                <p class="text-[#64748B] my-5 text-sm">Remote • Full-time • $130,000 - $175,000</p>
-                <button class="text-[#002C5C] my-2 text-sm bg-[#EEF4FF] px-3 py-2 font-semibold">NOT APPLIED</button>
-                <P class="text-[#323B49] mb-5">Build cross-platform mobile applications using React
-                    Native. Work on
-                    products used by millions of
-                    users worldwide.</P>
-                <button
-                    class="text-[#10B981] font-semibold uppercase py-2 px-3 border rounded-sm border-[#10B981] mr-2">Interview</button>
-                <button
-                    class="text-[#EF4444] font-semibold uppercase py-2 px-3 border rounded-sm border-[#EF4444]">Interview</button>
-                <div>
-                    <img class="cursor-pointer border-[#F1F2F4] border-2 rounded-full p-2 absolute top-6 right-0"
-                        src="img/delete.png" alt="">
-                </div>
-            </div>
-        </div>
+        </section>
     </main>
     <!-- add js -->
     <script src="script.js"></script>
